SQuirreL SQL Client Change Log
==============================


2.6.5 (??/??/????)
==================

Bug-Fixes:

1769599 fix for permission problem with Windows Vista.  Now we create our temporary path file in a temporary 
location that the user should always be able to write to.  Thanks to user aberdeen61 for contributing the 
fix.

DBCopy Plugin: MS SQLServer tables were created with VARCHAR(8000) columns, regardless of the 
size of the source database table columns.  Now, the length will be the same as the source 
database column.

2.6.4 (1/14/2008)
=================

Bug-Fixes:

DBCopy Plugin: Only attempt to order the tables being copied if there is 
more than one table in the copy set.

Oracle Plugin: Added ability to recognize "create package" and "create package body" 
statements to prevent SQLExceptions from improper statement tokenizing.

Syntax Plugin: Fixed memory leak which caused sessions not to be garbage 
collected.

1861402 (Informix catalog switching doesn't work correctly)


2.6.3 (12/22/2007)
=================

Bug-Fixes:

1848924: Sybase object browser contents not displayed.
1541325: Connection doesn't close when ending session - thanks goes to
         Alex Pivovarov for the patch that fixed the issue.

Oracle Plugin:
 - Allow the user to configure whether or not to show the syntax error offset in 
   the SQL Editor


2.6.2 (11/30/2007)
=================

Bug-Fixes:

1820792: Sybase ASE - table not shown in object browser
1821354: Changing default value of a column in Derby does nothing
1820214: 2.5.1 DB aliases do not transfer properly to 2.6.1
1820020: modified tables aren't sorted

2.6.1 (10/24/2007)
=================

Bug-Fixes:

1818446: Packaging problem in v2.6 on MacOS X - fails to launch
1805954: Tables not in alpha order in Object view


2.6 (10/20/2007)
===============

Enhancements:

New Plugin (Hibernate)
   - allows to generate SQL statements from Hibernate HQL statements
   - shows object tree of mapped objects